--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -41,6 +41,7 @@ pipeline {
                                     --name ${APP_NAME} \
                                     -p 3000:3000 \
                                     --restart always \
+                                    -e DATABASE_URL=${DATABASE _URL} \
                                     ${APP_NAME}
                             '
                         """
