--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^7.0.1
   http: ^1.6.0
+  flutter_riverpod: ^3.2.1
 
 dev_dependencies:
   flutter_test:
